--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,11 +1,38 @@
-h1 {
-  font-family: verdana;
-  font-weight:normal;
-  font-style: 50px;
-  color:white;
-  align:centered;
-}
-
 body {
   background-color: black;
+  font-family:verdana;
+  text-align: center;
+}
+
+.discover h1 {
+  font-weight:normal;
+  font-size:50px;
+  color:white;
+}
+.personal h1 {
+  font-weight:300;
+  font-size: 42px;
+  color:white;
+}
+
+.phone h1 {
+  font-weight:300;
+  color:white;
+  font-size:42px;
+}
+
+h2 {
+  color:gray;
+  font-size:21px;
+}
+
+.phone h2 {
+  text-align:right;
+
+}
+
+h3 {
+  color:aquamarine;
+  font-size:16px;
+  text-decoration: underline;
 }
